Update fetch to use dummy data. Fix collapse button text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,9 +51,9 @@ html {
   display: none;
 }
 
-.show (
+.show {
   display: block;
-)
+}
 
 /* JQUERY AUTOCOMPLETE CSS */
 .ui-autocomplete {
